--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 body {
   background: url("../images/cubs-logo.png");
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-  font-size: 18px;
+  font-size: 16px;
   color: #C8102E;
   text-align: center;
 }
@@ -35,7 +35,7 @@ h3 {
   text-align: center;
   color: #C8102E;
   font-weight: bold;
-  margin-top: 20px;
+  padding-top: 30px;
 }
 
 .questions {
@@ -46,4 +46,11 @@ h3 {
   background: #C8102E;
   width: 50%;
   margin: auto;
+}
+
+#results {
+  font-size: 20px;
+  text-align: center;
+  color: #C8102E;
+  font-weight: bold;
 }
